# pulp-classic-effects

./: .gitignore  CMakeLists.txt  README.md  effect_editors.hpp  ink_signal_editor.hpp  test_editors.cpp
.github/workflows/: pages.yml
chorus/: CMakeLists.txt  README.md  au_v2_entry.cpp  chorus.hpp  chorus_editor.hpp  clap_entry.cpp  test_chorus.cpp  vst3_entry.cpp
compressor-expander/: CMakeLists.txt  README.md  au_v2_entry.cpp  clap_entry.cpp  compressor_expander.hpp  compressor_expander_editor.hpp  test_compressor_expander.cpp  vst3_entry.cpp
delay/: CMakeLists.txt  README.md  au_v2_entry.cpp  clap_entry.cpp  delay.hpp  delay_editor.hpp  test_delay.cpp  test_delay_editor.cpp  vst3_entry.cpp
distortion/: CMakeLists.txt  README.md  au_v2_entry.cpp  clap_entry.cpp  distortion.hpp  distortion_editor.hpp  test_distortion.cpp  vst3_entry.cpp
flanger/: CMakeLists.txt  README.md  au_v2_entry.cpp  clap_entry.cpp  flanger.hpp  flanger_editor.hpp  test_flanger.cpp  vst3_entry.cpp
gui-zoo/: README.md
midi-transpose/: CMakeLists.txt  README.md  midi_transpose.hpp
mono-synth/: CMakeLists.txt  README.md  mono_synth.hpp  test_mono_synth.cpp
panning/: CMakeLists.txt  README.md  au_v2_entry.cpp  clap_entry.cpp  panning.hpp  panning_editor.hpp  test_panning.cpp  vst3_entry.cpp
parametric-eq/: CMakeLists.txt  README.md  au_v2_entry.cpp  clap_entry.cpp  parametric_eq.hpp  parametric_eq_editor.hpp  test_parametric_eq.cpp  vst3_entry.cpp
phaser/: CMakeLists.txt  README.md  au_v2_entry.cpp  clap_entry.cpp  phaser.hpp  phaser_editor.hpp  test_phaser.cpp  vst3_entry.cpp
ping-pong/: CMakeLists.txt  README.md  au_v2_entry.cpp  clap_entry.cpp  ping_pong.hpp  ping_pong_editor.hpp  test_ping_pong.cpp  vst3_entry.cpp
pitch-shift/: CMakeLists.txt  README.md  au_v2_entry.cpp  clap_entry.cpp  pitch_shift.hpp  pitch_shift_editor.hpp  test_pitch_shift.cpp  vst3_entry.cpp
ring-mod/: CMakeLists.txt  README.md  au_v2_entry.cpp  clap_entry.cpp  ring_mod.hpp  ring_mod_editor.hpp  test_ring_mod.cpp  vst3_entry.cpp
robotization/: CMakeLists.txt  README.md  au_v2_entry.cpp  clap_entry.cpp  robotization.hpp  robotization_editor.hpp  test_robotization.cpp  vst3_entry.cpp
scripts/: build-web.sh  windows-reaper-build.ps1
tremolo/: CMakeLists.txt  README.md  au_v2_entry.cpp  clap_entry.cpp  test_tremolo.cpp  tremolo.hpp  tremolo_editor.hpp  vst3_entry.cpp
vibrato/: CMakeLists.txt  README.md  au_v2_entry.cpp  clap_entry.cpp  test_vibrato.cpp  vibrato.hpp  vibrato_editor.hpp  vst3_entry.cpp
wah/: CMakeLists.txt  README.md  au_v2_entry.cpp  clap_entry.cpp  test_wah.cpp  vst3_entry.cpp  wah.hpp  wah_editor.hpp
web/: CMakeLists.txt  README.md  WAM-vs-WCLAP.md  WAM-vs-WEBCLAP.md  chorus_wasm.cpp  compressor_expander_wasm.cpp  delay_wasm.cpp  distortion_wasm.cpp  flanger_wasm.cpp  gen-og-images.mjs  gen-og.mjs  panning_wasm.cpp  parametric_eq_wasm.cpp  phaser_wasm.cpp  ping_pong_wasm.cpp  pitch_shift_wasm.cpp  ring_mod_wasm.cpp  robotization_wasm.cpp  tremolo_wasm.cpp  vibrato_wasm.cpp  wah_wasm.cpp
web/site/: index.html
web/site/chorus/: index.html
web/site/compressor-expander/: index.html
web/site/delay/: index.html
web/site/distortion/: index.html
web/site/flanger/: index.html
web/site/panning/: index.html
web/site/parametric-eq/: index.html
web/site/phaser/: index.html
web/site/ping-pong/: index.html
web/site/pitch-shift/: index.html
web/site/player/: fonts.css  pulp-player.js  tokens.css
web/site/player/widgets/: base.js  combo.js  fader.js  index.js  knob.js  meter-ballistics.js  meter.js  toggle.js
web/site/ring-mod/: index.html
web/site/robotization/: index.html
web/site/tremolo/: index.html
web/site/vibrato/: index.html
web/site/wah/: index.html
web/tests/: adapter-seam.test.mjs  adapter-smoke.html
